2005-10-20  Wim Taymans  <wim@fluendo.com>

	* gst/playback/test5.c: (new_pad), (no_more_pads), (start_finding),
	(dump_element_stats), (main):
	* gst/playback/test6.c: (main):
	Fix tests again

2005-10-20  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/audiotestsrc/gstaudiotestsrc.c: (gst_audiotestsrc_src_query):
	* gst/sine/gstsinesrc.c: (gst_sinesrc_src_query):
	  Don't use functions for position queries when handling
	  duration queries.

2005-10-20  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/vorbis/vorbisdec.c: (vorbis_dec_sink_event),
	(vorbis_handle_data_packet), (vorbis_dec_chain),
	(vorbis_dec_change_state):
	* ext/vorbis/vorbisdec.h:
	  Vorbis streams can be embedded in other container formats
	  than ogg, container formats where the demuxer might set 
	  timestamps on encoded vorbis buffers instead of those silly 
	  granulepos thingies. In short: make vorbisdec handle 
	  timestamps on incoming buffers as well.

2005-10-20  Wim Taymans  <wim@fluendo.com>

	* gst/playback/gstplaybasebin.c: (group_destroy),
	(gst_play_base_bin_change_state):
	Fix leak.
	Handle case where playbasebin is now ASYNC because
	decodebin is.

2005-10-19  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/audioconvert/Makefile.am:
	* gst/audioconvert/bufferframesconvert.c:
	* gst/audioconvert/plugin.c: (plugin_init):
	* gst/audioconvert/plugin.h:
	  And bye bye buffer-frames-convert

2005-10-19  Wim Taymans  <wim@fluendo.com>

	* check/elements/audioconvert.c:
	* docs/libs/tmpl/gstaudio.sgml:
	* docs/libs/tmpl/gstcolorbalance.sgml:
	* ext/vorbis/vorbisdec.c: (vorbis_dec_sink_event),
	(vorbis_handle_identification_packet), (vorbis_handle_data_packet):
	* ext/vorbis/vorbisenc.c: (raw_caps_factory):
	* gst-libs/gst/audio/audio.c: (gst_audio_structure_set_int):
	* gst-libs/gst/audio/audio.h:
	* gst/audioconvert/audioconvert.h:
	* gst/audioconvert/gstaudioconvert.c:
	(gst_audio_convert_parse_caps):
	* gst/volume/gstvolume.c:
	Bye bye buffer-frames.
