@@ -1,3 +1,12 @@
+2005-10-20  Tim-Philipp Müller  <tim at centricular dot net>
+
+	* ext/vorbis/vorbisenc.c: (gst_vorbisenc_get_query_types),
+	(gst_vorbisenc_src_query):
+	  Implement position and duration queries.
+
+	* gst/playback/test3.c: (update_scale), (main):
+	  Fix for async state changes and print nicer output.
+
 2005-10-20  Wim Taymans  <wim@fluendo.com>
 
 	* gst/playback/test5.c: (new_pad), (no_more_pads), (start_finding),
